--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,6 +3,7 @@
 :root {
   --bg-sidebar: #ef952b;
   --bg-new-feed: #da7600;
+  --bg-news: #FFBC6E;
   --titles-sidebar: #fff8d2;
 
   --regular-font: "Nunito", sans-serif;
