--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -7,6 +7,7 @@
   --bg-news: #ffbc6e;
   --titles-sidebar: #fff8d2;
   --bg-category-tag: #e0861e;
+  --bg-source-tag: #ffba6a;
 
   --regular-font: "Nunito", sans-serif;
   --semibold-font: "Nunito-Semibold", sans-serif;
