Minor features - Now feed items without image shows a default image - Feed container now is scrollable

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -44,6 +44,10 @@ body {
   cursor: pointer;
 }
 
+#source-container{
+  overflow:auto;
+  height: 200px;
+}
 .feed-source {
   background-color: var(--bg-source-tag);
   border-radius: 20px;
